--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -76,7 +76,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./test2.exe"
+export_path="../../Downloads/runnable game/test2.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
